fix spacing and format css file

--- a/src/App.css
+++ b/src/App.css
@@ -1,124 +1,122 @@
 html {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serifbody,
-    html;
-  color: #252a2f;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+        sans-serifbody, html;
+    color: #252a2f;
 }
 
 .App {
-  display: flex;
-  max-width: 100%;
+    display: flex;
+    max-width: 100%;
 }
 
 .App-sidebar {
-  box-sizing: border-box;
-  width: 220px;
-  flex: 0 0 auto;
-  background: #f25784;
-  color: white;
+    box-sizing: border-box;
+    width: 220px;
+    flex: 0 0 auto;
+    background: #f25784;
+    color: white;
 }
 
 .App-body {
-  flex: 0 1 auto;
-  max-width: calc(100vw - 220px);
+    flex: 0 1 auto;
+    max-width: calc(100vw - 220px);
 }
 
-
 img {
-  display: block;
-  width: 100%;
-  height: auto;
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
 .cases-container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .case-container {
-  margin: 20px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
 }
 
 .grid-bg {
-  overflow-x: auto;
-  position: relative;
-  background-color: #e0e0e0;
-  background-image: linear-gradient(
-      0deg,
-      transparent 24%,
-      rgba(255, 255, 255, 0.55) 25%,
-      rgba(255, 255, 255, 0.55) 26%,
-      transparent 27%,
-      transparent 74%,
-      rgba(255, 255, 255, 0.55) 75%,
-      rgba(255, 255, 255, 0.55) 76%,
-      transparent 77%,
-      transparent
-    ),
-    linear-gradient(
-      90deg,
-      transparent 24%,
-      rgba(255, 255, 255, 0.55) 25%,
-      rgba(255, 255, 255, 0.55) 26%,
-      transparent 27%,
-      transparent 74%,
-      rgba(255, 255, 255, 0.55) 75%,
-      rgba(255, 255, 255, 0.55) 76%,
-      transparent 77%,
-      transparent
-    );
-  background-size: 50px 50px;
+    overflow-x: auto;
+    position: relative;
+    background-color: #e0e0e0;
+    background-image: linear-gradient(
+            0deg,
+            transparent 24%,
+            rgba(255, 255, 255, 0.55) 25%,
+            rgba(255, 255, 255, 0.55) 26%,
+            transparent 27%,
+            transparent 74%,
+            rgba(255, 255, 255, 0.55) 75%,
+            rgba(255, 255, 255, 0.55) 76%,
+            transparent 77%,
+            transparent
+        ),
+        linear-gradient(
+            90deg,
+            transparent 24%,
+            rgba(255, 255, 255, 0.55) 25%,
+            rgba(255, 255, 255, 0.55) 26%,
+            transparent 27%,
+            transparent 74%,
+            rgba(255, 255, 255, 0.55) 75%,
+            rgba(255, 255, 255, 0.55) 76%,
+            transparent 77%,
+            transparent
+        );
+    background-size: 50px 50px;
 }
 
 .section {
-  padding: 18px;
+    padding: 18px;
 }
 
 .section-title {
-  margin: 0 0 12px 0;
+    margin: 12px;
 }
 
 .components-container {
-  display: flex;
-  flex-direction: column;
-  margin: 0 0 12px 0;
+    display: flex;
+    flex-direction: column;
+    margin: 12px;
 }
 
 .colors-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .color-container {
-  position: relative;
-  height: 145px;
-  margin: 10px;
+    position: relative;
+    height: 145px;
+    margin: 12px;
 }
 
 .color-display {
-  height: 120px;
-  width: 240px;
+    height: 120px;
+    width: 240px;
 }
 
 .color-name {
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
 }
 
 .color-value {
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
 }
 
 .text-styles-container {
-  display: flex;
-  flex-direction: column;
-  margin: 10px;
+    display: flex;
+    flex-direction: column;
+    margin: 12px;
 }
